Organized folders, updated readme

--- a/Data Annotation Tool.ipynb
+++ b/Data Annotation Tool.ipynb
@@ -77,7 +77,7 @@
    "id": "044100e4",
    "metadata": {},
    "source": [
-    "# Lets draw square like you see in object detection tutorials!\n",
+    "# Draw square - object detection \n",
     "x1,y1 ------<br/>\n",
     "|&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |<br/>\n",
     "|&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |<br/>\n",
@@ -87,25 +87,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7dcffe27",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "img = cv2.imread('cars_highway.jpg')\n",
-    "target_img = img.copy() # 사본 이미지\n",
+    "target_img = img.copy() \n",
     "\n",
     "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "ret, otsu = cv2.threshold(gray,-1, 255, cv2.THRESH_BINARY | cv2.THRESH_OTSU)\n",
     "contours, hierarchy = cv2.findContours(otsu, cv2.RETR_LIST, cv2.CHAIN_APPROX_NONE) \n",
     "\n",
-    "COLOR = (0,200,0) #녹색\n",
+    "COLOR = (0,200,0) \n",
     "\n",
     "for cnt in contours:\n",
     "    if cv2.contourArea(cnt) > 1000:\n",
     "        x, y, width, height = cv2.boundingRect(cnt)\n",
-    "        cv2.rectangle(target_img,(x,y),(x+width,y+height),COLOR,2) # 사각형 그림\n",
+    "        cv2.rectangle(target_img,(x,y),(x+width,y+height),COLOR,2) \n",
     "        for car in cnt:\n",
     "            cv2.putText(target_img,'car',(x,y),cv2.FONT_HERSHEY_SIMPLEX,1,(0,0,0),2)\n",
     "        \n",
@@ -145,6 +145,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b3a356a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "997c87f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deb9b4f3",
    "metadata": {},
    "outputs": [],
    "source": []
